k8s/dev/bsc-dev_service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: bsc-development
  name: bsc-frontend-development
spec:
  type: NodePort
  ports:
  - name: http
    port: 3001
    targetPort: 3001
  selector:
    app: bsc-frontend-development

---
apiVersion: v1
kind: Service
metadata:
  namespace: bsc-development
  name: bsc-core-development
spec:
  type: NodePort
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app: bsc-core-development
